New UI Cotart, speech to text

--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@
 }
 
 body {
-  background: #343541;
+  background: #fefeff;
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-  background: #343541;
-
+  background: #e1e1e9;
+  color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +50,7 @@ body {
 }
 
 .ai {
-  background: #40414F;
+  background: #e2e2e9;
 }
 
 .chat {
@@ -89,7 +89,7 @@ body {
 .message {
   flex: 1;
 
-  color: #dcdcdc;
+  color: #101010;
   font-size: 20px;
 
   max-width: 100%;
@@ -117,7 +117,7 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #40414F;
+  background: #edeefc;
 
   display: flex;
   flex-direction: row;
@@ -127,7 +127,7 @@ form {
 textarea {
   width: 100%;
 
-  color: #fff;
+  color: black;
   font-size: 18px;
 
   padding: 10px;
@@ -147,4 +147,5 @@ button {
 form img {
   width: 30px;
   height: 30px;
+  margin-bottom: 4px;
 }
